monitoring/vm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmselect-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.berto-it.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmselect-vm
                port:
                  number: 8428
